--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#3333ff",
-        "activityBar.activeBorder": "#600000",
-        "activityBar.background": "#3333ff",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#600000",
+        "activityBar.activeBackground": "#ffbc59",
+        "activityBar.activeBorder": "#009f5f",
+        "activityBar.background": "#ffbc59",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#009f5f",
         "activityBarBadge.foreground": "#e7e7e7",
-        "sash.hoverBorder": "#3333ff",
-        "statusBar.background": "#0000ff",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#3333ff",
-        "statusBarItem.remoteBackground": "#0000ff",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#0000ff",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#0000ff99",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "sash.hoverBorder": "#ffbc59",
+        "statusBar.background": "#ffa726",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#f29000",
+        "statusBarItem.remoteBackground": "#ffa726",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#ffa726",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#ffa72699",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "blue"
+    "peacock.color": "#ffa726"
 }
