--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#ffbc59",
-        "activityBar.activeBorder": "#009f5f",
-        "activityBar.background": "#ffbc59",
+        "activityBar.activeBackground": "#eb6e47",
+        "activityBar.activeBorder": "#6fef8e",
+        "activityBar.background": "#eb6e47",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#009f5f",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "sash.hoverBorder": "#ffbc59",
-        "statusBar.background": "#ffa726",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#f29000",
-        "statusBarItem.remoteBackground": "#ffa726",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#ffa726",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#ffa72699",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBarBadge.background": "#6fef8e",
+        "activityBarBadge.foreground": "#15202b",
+        "sash.hoverBorder": "#eb6e47",
+        "statusBar.background": "#e64a19",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#eb6e47",
+        "statusBarItem.remoteBackground": "#e64a19",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#e64a19",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#e64a1999",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#ffa726"
+    "peacock.color": "#e64a19"
 }
