--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#ffd033",
-        "activityBar.activeBorder": "#009f7b",
-        "activityBar.background": "#ffd033",
+        "activityBar.activeBackground": "#33c0ff",
+        "activityBar.activeBorder": "#df009a",
+        "activityBar.background": "#33c0ff",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#009f7b",
+        "activityBarBadge.background": "#df009a",
         "activityBarBadge.foreground": "#e7e7e7",
-        "sash.hoverBorder": "#ffd033",
-        "statusBar.background": "#ffc400",
+        "sash.hoverBorder": "#33c0ff",
+        "statusBar.background": "#00b0ff",
         "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#cc9d00",
-        "statusBarItem.remoteBackground": "#ffc400",
+        "statusBarItem.hoverBackground": "#008dcc",
+        "statusBarItem.remoteBackground": "#00b0ff",
         "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#ffc400",
+        "titleBar.activeBackground": "#00b0ff",
         "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#ffc40099",
+        "titleBar.inactiveBackground": "#00b0ff99",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#ffc400"
+    "peacock.color": "#00b0ff"
 }
